Fixed projects page formatting on mobile

--- a/src/pages/projects.module.scss
+++ b/src/pages/projects.module.scss
@@ -15,6 +15,8 @@
 
 .projects {
   padding: 0 10px 0 5vw;
+  height: 100%;
+  overflow: auto;
 }
 
 .title {
